--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "npx electron-packager ./ --all"
   },
   "author": "Kaleem Peeroo",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^8.1.1"
+    "electron": "^8.1.1",
+    "electron-packager": "^14.2.1"
   },
   "dependencies": {
     "csv-parse": "^4.8.8"
